css/main.css
body {
  margin: 0px;
  background-color: #383239;
  font-family: "Open Sans", sans-serif;
  scroll-behavior: smooth;
  height: 100%;
}

#hero-title {
  color: white;
  font-family: "Arvo", serif;
  font-weight: 800;
  font-size: 100px;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-bottom: 0px;
  letter-spacing: 10px;
}

p {
  color: white;
  letter-spacing: 10px;
}

.location {
  margin-bottom: 25px;
  letter-spacing: 5px;
}

.email-button {
  font-family: "Open Sans", sans-serif;
  color: white;
  text-decoration: none;
  border: 1px solid white;
  padding: 10px 20px;
  margin-top: 20px;
  letter-spacing: 5px;
  transition: 0.25s;
  z-index: 10;
}

.email-button:hover {
  padding: 20px 40px;
}

@media (max-width: 600px) {
  h1 {
    font-size: 80px;
  }
  p {
    font-size: 20px;
    letter-spacing: 10px;
  }
}

.hero-overlay {
  position: absolute;
  z-index: 15;
  text-align: center;
  margin-top: 3vh;
}
#hero {
  display: flex;
  height: 100vh;
  width: 100%;
  justify-content: center;
  align-items: center;
}

.hero-text {
  text-align: center;
  text-transform: uppercase;
  font-size: 1.5em;
  position: absolute;
  z-index: 10;
  /* margin-top: 40vh; */
  padding-top: 60vh;
}

.hero-text p {
  font-weight: 800;
}

#rose {
  position: absolute;
  z-index: -1;
  top: 0;
}

#nav {
  color: white;
  position: absolute;
  bottom: 0;
}

ul {
  list-style-type: none;
  padding-left: 0px;
}

li {
  float: left;
}

li a {
  display: block;
  color: white;
  text-align: center;
  padding: 16px;
  text-decoration: none;
}

#nav a {
  color: white;
}

section h1 {
  color: white;
  font-family: "Arvo", serif;
  font-size: 50px;
  margin-top: 0;
  margin-bottom: 15px;
  text-align: center;
  text-transform: uppercase;
}

section {
  padding: 30px 20vw;
  padding-bottom: 40px;
  text-align: center;
}

.background-gray {
  background: #383239;
}

.background-yellow {
  background: #383239;
}

.background-blue {
  background: #acccec;
  color: #383239 !important;
}

.background-green {
  background: #7eb75a;
}

.background-blue h1,
.background-blue p,
.background-blue a,
.background-green {
  color: #383239 !important;
}

section p {
  letter-spacing: 0px;
  font-size: 20px;
}

.sponsor {
  width: 150px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 50px;
  -webkit-transition: all 0.5s linear;
  -o-transition: all 0.5s linear;
  transition: all 0.5s linear;
  padding: 20px;
}

.sponsor-cta {
  text-align: center;
  color: #1a1a1a;
}

.sponsor-cta a {
  color: #1a1a1a;
}

.sponsors-img-container {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
}

.moon-shadow {
  width: 300px;
}

.moon-shadow img {
  -webkit-filter: drop-shadow(0px 0px 0px rgb(190, 61, 255));
}

.moon-shadow img {
  width: 100%;
}

.moon-shadow img:hover {
  -webkit-filter: drop-shadow(0px 0px 20px rgb(190, 61, 255));
}

.sponsor {
  -webkit-filter: drop-shadow(0px 0px 0px rgb(255, 61, 61));
}

.sponsor:hover {
  -webkit-filter: drop-shadow(0px 0px 20px rgb(255, 61, 61));
}

.bluenette {
  padding: 0 35%;
}

.bluenette img {
  width: 100%;
  -webkit-filter: drop-shadow(0px 0px 0px rgb(61, 135, 255));
}

.bluenette img:hover {
  -webkit-filter: drop-shadow(0px 0px 20px rgb(61, 135, 255));
}

a {
  color: white;
}

footer p {
  letter-spacing: 0;
  text-align: center;
}

.faq-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.faq {
  width: 45%;
  text-align: center;
}

.faq h2 {
  font-family: "Arvo", serif;
  color: white;
}

.hero {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

#rosehack-hero {
  width: 100%;
}

.hero-logo {
  width: 20vw;
  z-index: 10;
  transition-duration: 0.5s;
}

.hero-logo:hover {
  width: 22vw;
}

.coffee-img {
  padding: 0 25px;
  float: left;
  width: 35%;
}

@media (max-width: 1250px) {
  .hero-text {
    padding-top: 35vh;
  }
  .hero-text p {
    display: none;
  }
  .hero-text a {
    font-size: 0.5em;
    font-weight: 800;
    background: #383239;
    opacity: 1;
  }
  section {
    padding: 30px 5vw;
  }
  section p {
    font-size: 18px;
  }
  .faq {
    width: 100%;
  }
  .email-button {
    bottom: unset;
  }
}

@media (max-width: 600px) {
  #rosehack-hero svg {
    width: 200% !important;
    transform: translate3d(-25%, 0px, 0px) !important;
  }
  .hero-logo {
    width: 50vw;
  }
  .hero-logo:hover {
    width: 55vw;
  }
  .cta-button {
    margin-top: 50vw;
  }
  .coffee-img {
    align-items: center;
    width: 70%;
    padding: 4% 15%;
    margin-left: auto;
  }
  .tab label {
    line-height: 1.25 !important;
  }
  .tab input[type="checkbox"] + label::after {
    content: "" !important;
  }
  .tab input[type="radio"] + label::after {
    content: "" !important;
  }
}

.row {
  display: flex;
  justify-content: space-around;
  padding: 0 10%;
}

.stats h2 {
  font-size: 5em;
  margin-top: 0;
  margin-bottom: 0;
  font-family: "Arvo", serif;
  color: #383239;
}

@media (max-width: 700px) {
  .stats h2 {
    font-size: 3em;
  }
}

.stats p {
  margin-top: 0;
  margin-bottom: 0;
}

.social {
  margin-top: 0;
  margin-bottom: 0;
  text-align: center;
  color: white;
}

.social a {
  text-decoration: none;
}

.fab {
  padding-left: 10px;
  padding-right: 10px;
}

footer {
  padding: 20px 0;
  background: #6a958d;
}

footer div,
footer p {
  margin: 0;
}

footer p {
  margin-top: 10px;
}

#about {
  text-align: left;
}

/* Accordian styles */
.tab {
  position: relative;
  margin-bottom: 25px;
  width: 100%;
  color: #fff;
  overflow: hidden;
  font-family: "Arvo", serif;
  text-align: left;
  /* font-size: 1.5em; */
}
.tab input {
  position: absolute;
  opacity: 0;
  z-index: -1;
}
.tab label {
  position: relative;
  display: block;
  font-weight: bold;
  line-height: 2.5;
  cursor: pointer;
  border-bottom: 2px solid #ccc;
}

.tab label:hover {
  border-bottom: 2px solid #40c9ff;
}

.tab-content {
  max-height: 0;
  overflow: hidden;
  -webkit-transition: max-height 0.35s;
  -o-transition: max-height 0.35s;
  transition: max-height 0.35s;
}
.tab-content p {
  font-family: "Open Sans", sans-serif;
}
/* :checked */
.tab input:checked ~ .tab-content {
  max-height: 100vh;
}
/* Icon */
.tab label::after {
  position: absolute;
  right: 0;
  top: 0;
  display: block;
  width: 3em;
  height: 3em;
  line-height: 3;
  text-align: center;
  -webkit-transition: all 0.35s;
  -o-transition: all 0.35s;
  transition: all 0.35s;
}
.tab input[type="checkbox"] + label::after {
  content: "💐";
}
.tab input[type="radio"] + label::after {
  content: "💐";
}
.tab input[type="checkbox"]:checked + label::after {
  transform: rotate(315deg);
}
.tab input[type="radio"]:checked + label::after {
  transform: rotateX(180deg);
}

.half {
  width: 48%;
}

